# simple-agent-cli

./: .gitignore  CLAUDE.md  README.md  config.example.toml  config.toml  hello.py  index.html  pacman_game.py  pyproject.toml
simple_cli/: config.py  context.py  main.py  mcp.py  memory.py  prompt.py  repl.py  session.py
simple_cli/agent/: __init__.py  base.py  fc.py  react.py
simple_cli/docs/: 01-llm-client.md  02-tool-system.md  03-agent-core.md  04-session-persistence.md  05-gap-analysis.md  06-context-engineering.md  07-system-prompt-engineering.md  08-error-recovery.md  09-subagent.md  10-memory-system.md  11-plan-mode.md  12-mcp-protocol.md  13-verify-loop.md  14-react-optimization.md
simple_cli/llm/: __init__.py  client.py
simple_cli/tools/: __init__.py  base.py
simple_cli/tools/builtin/: __init__.py  list_dir.py  read_file.py  run_command.py  verify_file.py  web_search.py  write_file.py
tests/: test_fc_agent.py  test_llm_client.py
